tests/toylang/neg/000924_mutation.toylang
program a = { if a bool sleep; } .
